2005-07-13  Owen Taylor  <otaylor@redhat.com>

	* foundation.gnome.org/finance/index.wml: Add 2004 GUADEC summary.

	* foundation.gnome.org/about/index.wml: Add information about
	advisory board fees, update advboard list.

	* foundation.gnome.org/about/charter/index.wml: Note that the
	advisory board information is out of date.

2005-05-23  James Henstridge  <james@jamesh.id.au>

	* rules.common (%.php): go back to evilsedhack for php files,
	since PHP is evil.  Should fix this when we can get the XSLT
	working for the PHP scripts we have.

2005-05-20  James Henstridge  <james@jamesh.id.au>

	* autogen.sh: make this script pass on errors caused by
	autoconf, automake, etc rather than continuing to run.
	Also call automake with the --foreign argument so it doesn't
	complain about missing AUTHORS and NEWS files.

	* rules.common: use xsltproc to process the *.wml documents.

	* include/add-header.xsl: new XSLT script that takes the place of
	evilsedhack.

	* foundation.gnome.org/elections/2004/preliminary-results.wml:
	same here.

	* foundation.gnome.org/elections/2004/candidates.wml: add a <meta>
	tag to set the charset of the document to UTF-8, so it can be
	parsed correctly as HTML.

2005-03-24  Murray Cumming <murrayc@murrayc.com>

	* foundation.gnome.org/about/index.wml:
	Updated the list of directors.

2005-03-01  Vincent Untz  <vincent@vuntz.net>

	* foundation.gnome.org/*wml: try to make the titles more consistent

	* foundation.gnome.org/about/history/index.wml: add previous board

2005-03-01  Vincent Untz  <vincent@vuntz.net>

	* foundation.gnome.org/membership/application.wml: add a note about
	the delay 

2004-12-21  Vincent Untz  <vincent@vuntz.net>

	* foundation.gnome.org/index.wml:
	* foundation.gnome.org/news/index.wml: add news about elections
	results being now official
	* foundation.gnome.org/elections/2004/index.wml: add link to the
	announcement

2004-12-09  Vincent Untz  <vincent@vuntz.net>
