@@ -5,8 +5,9 @@ urlpath = /finance
 page_SCRIPTS = \
 	index.html
 
-page_DATA = \
-	gnome-foundation-fiscal-year-03-and-02.pdf \
-	gnome-foundation-accountant-03.pdf
+page_DATA =						\
+	gnome-foundation-fiscal-year-03-and-02.pdf	\
+	gnome-foundation-accountant-03.pdf		\
+	guadec-2004-financial-summary.pdf
 
 include $(top_srcdir)/rules.common
